# Shanghai

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
include/: stb_image.h  wlr-layer-shell-unstable-v1-client-protocol.h
include/glad/: glad.h
libs/glad/: glad.c
protocol/: wlr-layer-shell-unstable-v1.xml
shader/: background.frag  background.vert  background1.frag  background2.frag  background3.frag  backgroundcommon.frag  shanghai.frag  shanghai.vert
src/: Background.cpp  Background.h  EGLWaylandContext.cpp  EGLWaylandContext.h  Random.cpp  Random.h  Shader.cpp  Shader.h  Shanghai.cpp  Shanghai.h  ShanghaiStateMachine.cpp  ShanghaiStateMachine.h  Tsukasa.cpp  Tsukasa.h  gl.h  keyboard.h  main.cpp  pointer.h  state.h
src/animation/: ShanghaiAnimationMachine.cpp  ShanghaiAnimationMachine.h
src/config/: ShanghaiConfiguration.cpp  ShanghaiConfiguration.h
src/states/: Ceiling.cpp  Ceiling.h  CeilingCrawl.cpp  CeilingCrawl.h  Crawling.cpp  Crawling.h  Dragged.cpp  Dragged.h  Falling.cpp  Falling.h  Idle.cpp  Idle.h  Jump.cpp  Jump.h  Landed.cpp  Landed.h  LieDown.cpp  LieDown.h  Resist.cpp  Resist.h  ShanghaiStateMachineState.h  Sitting.cpp  Sitting.h  SittingAndLooking.cpp  SittingAndLooking.h  Standing.cpp  Standing.h  Walking.cpp  Walking.h  WallClimb.cpp  WallClimb.h  WallHold.cpp  WallHold.h
src/wayland/: EGLWaylandContext.cpp  layer.h  main.cpp  pointer.h  registry.h  seat.h  surface.h
src/windows/: main.cpp
src/x11/: main.cpp
